@@ -1,5 +1,6 @@
 CHANGELOG
 
+2014-07-27: Added new proverbs from qep'a' 2014.
 2014-07-26: Remove dependency on ActionBarSherlock.
 
 AppCompat.Dark theme generated using:
